@@ -1,7 +1,12 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.4
 Date: ????
+  Bugfixes:
+    - Fixed a possible crash in the cargo pod remote interface.
+  Locale:
+    - Added German translation.
   Changes:
+    - Update to the orbit generator script to support valid sprites for larger orbit radii.
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.3
 Date: 2025-06-29
